# source-highlight-qt

./: CMakeLists.txt  README.md  TODO.txt
editor/: CMakeLists.txt  LineNumberArea.cpp  LineNumberArea.h  SourceEditor.cpp  SourceEditor.h
lib/: .Qt4SyntaxHighlighter.h.swp  CMakeLists.txt  ColorDialog.cpp  ColorDialog.h  GNUSyntaxHighlighter.cpp  GNUSyntaxHighlighter.h  HighlightStateData.h  LanguageComboBox.cpp  LanguageComboBox.h  LanguageElemColorForm.cpp  LanguageElemColorForm.h  MainColorForm.cpp  MainColorForm.h  OutputFormatComboBox.cpp  OutputFormatComboBox.h  ParagraphMap.cpp  ParagraphMap.h  Qt4SourceHighlightStyleGenerator.cpp  Qt4SourceHighlightStyleGenerator.h  Qt4SyntaxHighlighter.cpp  Qt4SyntaxHighlighter.h  Qt4TextFormatter.cpp  Qt4TextFormatter.h  Qt4TextFormatterFactory.cpp  Qt4TextFormatterFactory.h  QtColorMap.cpp  QtColorMap.h  SourceHighlightExceptionBox.cpp  SourceHighlightExceptionBox.h  SourceHighlightSettingsDialog.cpp  SourceHighlightSettingsDialog.h  SourceHighlightSettingsPage.cpp  SourceHighlightSettingsPage.h  StyleComboBox.cpp  StyleComboBox.h  TextEditHighlighted.cpp  TextEditHighlighted.h  TextFormatter.cpp  TextFormatter.h  TextFormatterFactory.cpp  (+6 more)
tests/: CMakeLists.txt  asserttestexit.h  example.cpp  qt4_highlighter_edit_main.cpp  qt4_highlighter_example_main.cpp  qt4_highlighter_view_main.cpp  test_colormap_main.cpp  test_get_lang_files_main.cpp  test_paragraphmap_main.cpp  test_qt4_formatter_factory_main.cpp  test_qt4_simple_main.cpp  test_qt4_syntaxhighlighter_main.cpp
