cmake_minimum_required(VERSION 3.2.3)
project(tests)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_Package(Qt5Core REQUIRED)

add_executable(qt4_highlighter_edit_main qt4_highlighter_edit_main.cpp)
add_executable(qt4_highlighter_example_main qt4_highlighter_example_main.cpp)
add_executable(qt4_highlighter_view_main qt4_highlighter_view_main.cpp)
add_executable(test_colormap_main test_colormap_main.cpp)
add_executable(test_get_lang_files_main test_get_lang_files_main.cpp)
add_executable(test_paragraphmap_main test_paragraphmap_main.cpp)
add_executable(test_qt4_formatter_factory_main test_qt4_formatter_factory_main.cpp)
add_executable(test_qt4_simple_main test_qt4_simple_main.cpp)
add_executable(test_qt4_syntaxhighlighter_main test_qt4_syntaxhighlighter_main.cpp)

target_link_libraries(test_qt4_simple_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(test_paragraphmap_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(test_qt4_syntaxhighlighter_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(test_colormap_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(test_get_lang_files_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(qt4_highlighter_view_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(qt4_highlighter_edit_main LINK_PUBLIC -lsourceeditor srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(qt4_highlighter_example_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
target_link_libraries(test_qt4_formatter_factory_main LINK_PUBLIC srchiliteqt -lsource-highlight Qt5::Widgets Qt5::Core)
